--- a/k8s_jenkins/Dockerfile
+++ b/k8s_jenkins/Dockerfile
@@ -1,6 +1,9 @@
 # Use a lightweight base image
 FROM httpd:2.4.53-alpine
 
+# Create the /var/www/html directory (if it doesn't exist)
+RUN mkdir -p /var/www/html
+
 # Create a simple index.html file to display "Hello world!"
 RUN echo "Hello world!" > /var/www/html/index.html
 
